test/should_pass/hom_002.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node --> z:Node;
		hom(x, y, z);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

