test/should_fail/hom_004.grg

using attrib_model_001;

rule r {
	pattern {
		x:NINT -e:EINT-> y:NINT;
		hom(x,e);
	}
	modify {}
}

